fix(collapse): fix style in collapse boxes
- fixed abnormal line height in collapse boxes
- modified page footer

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2840,6 +2840,12 @@ sup.footnote-reference {
         pre {
             width: 100%;
         }
+
+        /* Fix line-height for paragraphs to match article content */
+        p {
+            line-height: 1.6em;
+            margin-bottom: 0.8rem;
+        }
     }
 }
 
